test-cases/type_ambig.exp
Error detected during type checking of modules type_ambig
test-cases/type_ambig.wybe:1:1: Type ambiguity in defn of ambig:
    Variable 'x' could be: wybe.bool, wybe.char, wybe.float, wybe.int, wybe.string
