test-cases/type_ambig.wybe
def ambig(x) use !io { !print(x) }
